apps/exo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exo
  namespace: exo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: exo.liberispat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exo-main
                port:
                  number: 8000
  tls:
    - hosts:
        - exo.liberispat.com
      secretName: liberispat-wildcard-tls
